css/print/pdf.css
/* Default Print Stylesheet Template
   by Rob Glazebrook of CSSnewbie.com
   Last Updated: June 4, 2008

   Feel free (nay, compelled) to edit, append, and
   manipulate this file as you see fit. */


/* SECTION 1: Set default width, margin, float, and
   background. This prevents elements from extending
   beyond the edge of the printed page, and prevents
   unnecessary background images from printing */

* {
	-webkit-print-color-adjust: exact;
}

body {
	font-size: 18pt;
	width: 297mm;
	height: 229mm;
	margin: 0 auto !important;
	border: 0;
	padding: 0;
	float: none !important;
	overflow: visible;
}

html {
	width: 100%;
	height: 100%;
	overflow: visible;
}

@page {
	size: letter landscape;
	margin: 0;
}

/* SECTION 2: Remove any elements not needed in print.
   This would include navigation, ads, sidebars, etc. */
.nestedarrow,
.controls,
.reveal .progress,
.reveal.overview,
.fork-reveal,
.share-reveal,
.state-background {
	display: none !important;
}

/* SECTION 3: Set body font face, size, and color.
   Consider using a serif font for readability. */
body, p, td, li, div {
	font-size: 18pt;
}

/* SECTION 4: Set heading font face, sizes, and color.
   Diffrentiate your headings from your body text.
   Perhaps use a large sans-serif for distinction. */
h1,h2,h3,h4,h5,h6 {
	text-shadow: 0 0 0 #000 !important;
}

/* SECTION 5: Make hyperlinks more usable.
   Ensure links are underlined, and consider appending
   the URL to the end of the link for usability. */
a:link,
a:visited {
	font-weight: bold;
	text-decoration: underline;
}


/* SECTION 6: more reveal.js specific additions by @skypanther */
ul, ol, div, p {
	visibility: visible;
	position: static;
	width: auto;
	height: auto;
	display: block;
	overflow: visible;
	margin: auto;
}
.reveal {
	width: auto !important;
	height: auto !important;
	overflow: hidden !important;
}
.reveal .slides {
	position: static;
	width: 100%;
	height: auto;

	left: auto;
	top: auto;
	margin: 0 !important;
	padding: 0 !important;

	overflow: visible;
	display: block;

	text-align: center;

	-webkit-perspective: none;
	   -moz-perspective: none;
	    -ms-perspective: none;
	        perspective: none;

	-webkit-perspective-origin: 50% 50%; /* there isn't a none/auto value but 50-50 is the default */
	   -moz-perspective-origin: 50% 50%;
	    -ms-perspective-origin: 50% 50%;
	        perspective-origin: 50% 50%;
}
.reveal .slides section {

	page-break-after: always !important;

	visibility: visible !important;

